c2dascript-transpile/tests/snapshots/snapshots__transpile@varargs.c.x86_64.linux.das.snap
---
source: c2dascript-transpile/tests/snapshots.rs
expression: transpile --strict tests/snapshots/arch-os-specific/varargs.c
---
TRANSLATION FAILED
operation=top-level declaration lowering; c_type=Function(CQualTypeId { qualifiers: Qualifiers { is_const: false, is_restrict: false, is_volatile: false }, ctype: CTypeId(44) }, [], false, false, true); declaration=call_printf; cause=unsupported external call: printf
--> ./tests/snapshots/arch-os-specific/varargs.c:6:5

--> ./tests/snapshots/arch-os-specific/varargs.c:5:1
