c2dascript-transpile/tests/snapshots/snapshots__transpile@vm_x86.c.x86_64.das.snap
---
source: c2dascript-transpile/tests/snapshots.rs
expression: transpile --strict tests/snapshots/arch-specific/vm_x86.c
---
TRANSLATION FAILED
operation=top-level declaration lowering; c_type=Function(CQualTypeId { qualifiers: Qualifiers { is_const: false, is_restrict: false, is_volatile: false }, ctype: CTypeId(31) }, [CQualTypeId { qualifiers: Qualifiers { is_const: false, is_restrict: false, is_volatile: false }, ctype: CTypeId(65) }, CQualTypeId { qualifiers: Qualifiers { is_const: false, is_restrict: false, is_volatile: false }, ctype: CTypeId(64) }], false, false, true); declaration=VM_CallCompiled; cause=unsupported inline asm: template="movq $5, %rax\nmovq $3, %r8\nmovq $4, %r9\npush %r15\npush %r14\npush %r13\npush %r12\ncallq *%rax\npop %r12\npop %r13\npop %r14\npop %r15\n", inputs=3, outputs=3, clobbers=["cc", "memory", "rax", "rcx", "rdx", "r8", "r9", "r10", "r11"], volatile=true
--> ./tests/snapshots/arch-specific/vm_x86.c:61:2

--> ./tests/snapshots/arch-specific/vm_x86.c:28:1
